src/objects/Workmen__c.object
<CustomObject>
    <fields>
        <fullName>Aadhar_ID__c</fullName>
        <label>Aadhar ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Driving_Licence__c</fullName>
        <label>Driving Licence</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Experiance__c</fullName>
        <label>Experiance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>CCTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wifi</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Votor_ID__c</fullName>
        <label>Votor ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Workmen</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WM-{0000}</displayFormat>
        <label>Workmen</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workmen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Government_ID_Proof</fullName>
        <active>true</active>
        <description>One of the Government ID Proof required</description>
        <errorConditionFormula>AND(
 ISBLANK( Aadhar_ID__c ),
 ISBLANK( Votor_ID__c ),
 ISBLANK( Driving_Licence__c )   
)</errorConditionFormula>
        <errorMessage>One of the Government ID Proof required</errorMessage>
    </validationRules>
</CustomObject>